2014-09-11  Tim Lammens  <tim.lammens@gmail.com>

	[BZ #17370]
	* libio/wfileops (do_ftell_wide): Free OUT.

2014-09-16  Siddhesh Poyarekar  <siddhesh@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	[BZ #17266]
	* libio/stdio.h: Check definition of __fortify_function
	instead of __extern_always_inline to include bits/stdio2.h.
	* math/bits/math-finite.h [__USE_XOPEN || __USE_ISOC99]: Also
	check if __extern_always_inline is defined.
	[__USE_MISC || __USE_XOPEN]: Likewise.
	[__USE_ISOC99] Likewise.
	* misc/sys/cdefs.h (__fortify_function): Define only if
	__extern_always_inline is defined.
	[!__cplusplus || __GNUC_PREREQ (4,3)]: Revert to defining
	__extern_always_inline and __extern_inline only for g++-4.3
	and newer or a compatible gcc.

2014-09-15  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #17371]
	* sysdeps/unix/sysv/linux/ifaddrs.c (getifaddrs_internal): Fix
	last change to handle zero prefix length.

2014-09-12  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/gnu/netinet/udp.h (UDP_NO_CHECK6_TX): New macro.
	(UDP_NO_CHECK6_RX): Likewise.

2014-09-13  Allan McRae  <allan@archlinux.org>

	* po/ru.po: Update Russian translation from translation project.

2014-09-07  Allan McRae  <allan@archlinux.org

	* version.h (RELEASE): Set to "stable".
	(VERSION): Set to "2.20"
	* include/features.h (__GLIBC_MINOR__): Set to 20.

	* manual/contrib.texi: Add entries for Wilco Dijkstra and Stefan
	Liebler.

	* po/ko.po: Update Korean translation from translation project.

2014-09-06  Chris Metcalf  <cmetcalf@tilera.com>

	[BZ #17354]
	* sysdeps/tile/dl-machine.h (elf_machine_rela): Add a MUNGE_SIGNED
	macro for handling signed relocations.

2014-09-03  Florian Weimer  <fweimer@redhat.com>

	[BZ #17325]
	* iconvdata/ibm1364.c (BODY): Fix check for sentinel.
	* iconvdata/ibm932.c (BODY): Replace invalid sentinel check with
	assert.
	* iconvdata/ibm933.c (BODY): Fix check for sentinel.
	* iconvdata/ibm935.c (BODY): Likewise.
	* iconvdata/ibm937.c (BODY): Likewise.